Update spear textures, add ruby spear

--- a/src/main/resources/assets/archers/lang/en_us.json
+++ b/src/main/resources/assets/archers/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.archers.diamond_spear": "Diamond Spear",
   "item.archers.netherite_spear": "Netherite Spear",
   "item.archers.aeternium_spear": "Aeternium Spear",
+  "item.archers.ruby_spear": "Ruby Spear",
 
   "item.archers.archer_armor_head": "Archer Hood",
   "item.archers.archer_armor_chest": "Archer Tunic",
