--- a/src/main/resources/assets/archers/lang/en_us.json
+++ b/src/main/resources/assets/archers/lang/en_us.json
@@ -61,8 +61,15 @@
   "spell.archers.magic_arrow.name": "Magic Arrow",
   "spell.archers.magic_arrow.description": "Shoots a magical arrow piercing thru all enemies in its path, dealing {damage} damage to each target.",
 
-  "advancements.rpg_classes.obtain_arrow.title": "Path of Archer",
-  "advancements.rpg_classes.obtain_arrow.description": "Obtain an Arrow",
-  "advancements.rpg_classes.archer_mastery.title": "Ballistics Expert",
-  "advancements.rpg_classes.archer_mastery.description": "Complete the full Archery Manual"
+  "advancements.rpg_series.path_choose_archer.title": "Path of Archery",
+  "advancements.rpg_series.path_choose_archer.description": "Create as Archery Manual",
+
+  "advancements.rpg_series.spell_novice_archer.title": "Lethal Shots",
+  "advancements.rpg_series.spell_novice_archer.description": "Obtain your first Archery skill",
+
+  "advancements.rpg_series.spell_master_archer.title": "Ballistics Expert",
+  "advancements.rpg_series.spell_master_archer.description": "Complete the full Archery Manual",
+
+  "advancements.rpg_series.obtain_arrow.title": "Path of Archer",
+  "advancements.rpg_series.obtain_arrow.description": "Obtain an Arrow"
 }
