--- a/src/main/resources/assets/archers/lang/ko_kr.json
+++ b/src/main/resources/assets/archers/lang/ko_kr.json
@@ -1,10 +1,10 @@
 {
-  "itemGroup.archers.general": "궁수",
+  "itemGroup.archers.general": "궁수 (RPG 시리즈)",
   "item.archers.auto_fire_hook.description_1": "자동으로 장전된 화살을 발사합니다.",
   "item.archers.auto_fire_hook.description_2": "모루에서 활 장비에 적용할 수 있습니다.",
-  "item.ranged_weapon.pull_time": "%1$s 초 당김 시간",
+  "item.ranged_weapon.pull_time": "%1$s초 당김 시간",
 
-  "block.archers.archers_workbench": "궁수 장인의 작업대",
+  "block.archers.archers_workbench": "궁수의 작업대",
   "block.archers.archers_workbench.hint": "궁수 장인 주민을 위한 작업대입니다.",
   "entity.minecraft.villager.archery_artisan": "궁수 장인",
   "entity.minecraft.villager.archers:archery_artisan": "궁수 장인",
@@ -46,12 +46,12 @@
   "item.archers.archer_spell_book": "궁술 교범",
 
   "spell.archers.power_shot.name": "강력한 사격",
-  "spell.archers.power_shot.description": "패시브 기술: 화살이 {effect_duration} 초 동안 대상에게 사냥꾼의 표식을 부여하여 받는 피해를 5%% 증가시키고, 최대 {effect_amplifier} 번까지 중첩됩니다.",
+  "spell.archers.power_shot.description": "패시브 기술: 화살이 {effect_duration}초 동안 대상에게 사냥꾼의 표식을 부여하여 받는 피해를 5%% 증가시키고, 최대 {effect_amplifier}번까지 중첩됩니다.",
   "effect.archers.hunters_mark": "표식됨",
   "effect.archers.hunters_mark.description": "모든 원천으로부터 받는 피해를 5%% 증가시킵니다.",
 
   "spell.archers.entangling_roots.name": "얽히는 뿌리",
-  "spell.archers.entangling_roots.description": "주변 지역에 뿌리를 소환하여 {cloud_duration} 초 동안 적의 이동 속도를 늦춥니다.",
+  "spell.archers.entangling_roots.description": "주변 지역에 뿌리를 소환하여 {cloud_duration}초 동안 적의 이동 속도를 늦춥니다.",
   "effect.archers.entangling_roots": "얽히는 뿌리",
   "effect.archers.entangling_roots.description": "이동 속도를 감소시킵니다.",
 
@@ -59,7 +59,7 @@
   "spell.archers.barrage.description": "짧은 시간 안에 여러 화살을 발사합니다.",
 
   "spell.archers.magic_arrow.name": "마법 화살",
-  "spell.archers.magic_arrow.description": "마법 화살을 발사하여 경로상의 모든 적을 관통하고 각 대상에게 {damage} 피해를 줍니다.",
+  "spell.archers.magic_arrow.description": "마법 화살을 발사하여 경로상의 모든 적을 관통하고 각 대상에게 {damage}의 피해를 줍니다.",
 
   "advancements.rpg_series.path_choose_archer.title": "궁술의 길",
   "advancements.rpg_series.path_choose_archer.description": "궁술 교범을 작성하세요",
