--- a/src/main/resources/assets/archers/lang/ko_kr.json
+++ b/src/main/resources/assets/archers/lang/ko_kr.json
@@ -22,12 +22,12 @@
   "item.archers.archer_armor_head": "궁수 후드",
   "item.archers.archer_armor_chest": "궁수 조끼",
   "item.archers.archer_armor_legs": "궁수 바지",
-  "item.archers.archer_armor_feet": "궁수 장화",
+  "item.archers.archer_armor_feet": "궁수 부츠",
 
   "item.archers.ranger_armor_head": "레인저 후드",
   "item.archers.ranger_armor_chest": "레인저 조끼",
   "item.archers.ranger_armor_legs": "레인저 바지",
-  "item.archers.ranger_armor_feet": "레인저 장화",
+  "item.archers.ranger_armor_feet": "레인저 부츠",
 
   "item.archers.composite_longbow": "복합 장궁",
   "item.archers.mechanic_shortbow": "기계식 단궁",
