--- a/src/main/resources/assets/archers/lang/en_us.json
+++ b/src/main/resources/assets/archers/lang/en_us.json
@@ -46,9 +46,9 @@
   "item.archers.archer_spell_book": "Archery Manual",
 
   "spell.archers.power_shot.name": "Power Shot",
-  "spell.archers.power_shot.description": "Passive skill: arrows inflict the target with Hunter's Mark for {effect_duration} seconds, increasing its damage taken by 5%%, stacking up to {effect_amplifier} times.",
+  "spell.archers.power_shot.description": "Passive skill: arrows inflict the target with Hunter's Mark for {effect_duration} seconds, increasing its damage taken by {damage_taken}, stacking up to {effect_amplifier} times.",
   "effect.archers.hunters_mark": "Marked",
-  "effect.archers.hunters_mark.description": "Increases damage taken from all sources by 5%%",
+  "effect.archers.hunters_mark.description": "Increases damage taken from all sources",
 
   "spell.archers.entangling_roots.name": "Entangling Roots",
   "spell.archers.entangling_roots.description": "Conjures roots to sprout from the ground in the nearby area, slowing down enemies for {cloud_duration} seconds.",
