--- a/src/main/resources/assets/archers/lang/es_es.json
+++ b/src/main/resources/assets/archers/lang/es_es.json
@@ -44,7 +44,7 @@
   "item.archers.archer_spell_book": "Manual de Arquería",
 
   "spell.archers.power_shot.name": "Disparo Potente",
-  "spell.archers.power_shot.description": "Las flechas infligen la Marca del Cazador al objetivo durante {effect_duration} segundos, aumentando el daño recibido en un 5%%, acumulándose hasta {effect_amplifier} veces.",
+  "spell.archers.power_shot.description": "Las flechas infligen la Marca del Cazador al objetivo durante {effect_duration} segundos, aumentando el daño recibido en un {damage_taken}, acumulándose hasta {effect_amplifier} veces.",
   "effect.archers.hunters_mark": "Marcado",
   "effect.archers.hunters_mark.description": "Aumenta el daño recibido de todas las fuentes en un 5%%",
 
