--- a/src/main/resources/assets/archers/lang/zh_cn.json
+++ b/src/main/resources/assets/archers/lang/zh_cn.json
@@ -40,7 +40,7 @@
   "item.archers.archer_spell_book": "弓术手册",
 
   "spell.archers.power_shot.name": "强劲射击",
-  "spell.archers.power_shot.description": "发射有力的箭，射击目标并附加其持续{effect_duration}秒的“猎人标记”，使其受到5%%的易伤，可堆叠{effect_amplifier}层。",
+  "spell.archers.power_shot.description": "发射有力的箭，射击目标并附加其持续{effect_duration}秒的“猎人标记”，使其受到{damage_taken}的易伤，可堆叠{effect_amplifier}层。",
   "effect.archers.hunters_mark": "猎人标记",
   "effect.archers.hunters_mark.description": "额外受到5%%所有种类的伤害",
 
